# data-agent

./: .gitignore  main.py  pyproject.toml
.accelerate/: .accelerate.m3u8bn  sdkconfig  ts_9
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: quert_router.py
app/api/schemas/: query_schema.py
app/cilents/: qdrant_client_manager.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/clients/.cph/: .mysql_client_manager.py_8930c33cf3041d592f1b6319b853eff1.prob
app/conf/: app_config.py  meta_config.py
app/core/: context.py  log.py
app/entities/: column_info.py  column_metric.py  metric_info.py  table_info.py  value_info.py
app/models/: column_info.py  column_metric.py  metric_info.py  table_info.py
app/prompts/: prompt_loader.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml  meta_config.yaml
docker/: docker-compose.yaml
docker/elasticsearch/: Dockerfile
docker/mysql/: dw.sql  meta.sql
prompts/: correct_sql.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_metric_recall.prompt  extend_keywords_for_value_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt
(+9 files in other folders)
